@@ -1,20 +1,17 @@
 
 .tryxpath--context----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
-    border: solid 10px rgb(0,0,255) !important;
+    outline: dashed thick rgb(0,0,255) !important;
 }
 
 .tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
-    border: solid 10px rgb(255,0,0) !important;
-}
-
-.tryxpath--focused----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
-    border: solid 10px rgb(0,255,0) !important;
+    outline: dashed thick rgb(255,0,0) !important;
 }
 
 .tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf.tryxpath--context----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
-    border: solid 10px rgb(255,0,255) !important;
+    outline: dashed thick rgb(128,0,255) !important;
 }
 
+.tryxpath--focused----f43c83f3-1920-4222-a721-0cc19c4ba9bf,
 .tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf.tryxpath--focused----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
-    border: solid 10px rgb(0,255,0) !important;
+    outline: solid thick rgb(0,255,0) !important;
 }
